[gd_scene load_steps=26 format=2]

[ext_resource path="res://textures/wood.png" type="Texture" id=1]
[ext_resource path="res://textures/Pack/TileSet.png" type="Texture" id=2]
[ext_resource path="res://scenes/Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/Open_Sans/OpenSans-SemiBold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://fonts/Open_Sans/OpenSans-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scripts/InGameMenu.gd" type="Script" id=6]
[ext_resource path="res://scenes/Main.gd" type="Script" id=7]
[ext_resource path="res://textures/wood-l.png" type="Texture" id=8]
[ext_resource path="res://textures/wood-r.png" type="Texture" id=9]
[ext_resource path="res://textures/stage.png" type="Texture" id=10]
[ext_resource path="res://Interfaz/UI.tscn" type="PackedScene" id=11]
[ext_resource path="res://sounds/BGM/Cancion Nivel loop.ogg" type="AudioStream" id=12]
[ext_resource path="res://textures/woodw.png" type="Texture" id=13]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 64, 0, 64, 76, 0, 76 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 64, 0, 64, 76, 0, 76 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 64, 0, 64, 76, 0, 76 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 64, 0, 64, 76, 0, 76 )

[sub_resource type="TileSet" id=5]
0/name = "TileSet.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 632, 240, 64, 76 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "TileSet.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 696, 240, 64, 76 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "TileSet.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 760, 240, 64, 76 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 3 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "TileSet.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 824, 240, 64, 76 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 4 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0

[sub_resource type="DynamicFont" id=6]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 16.2317, 16.0379, -0.241837, 16.0379, -0.241837, -0.241837, 16.2317, -0.241837 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="TileSet" id=12]
0/name = "wood.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 8 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "wood-r.png 1"
1/texture = ExtResource( 9 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 9 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "wood.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "wood-l.png 3"
3/texture = ExtResource( 8 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 10 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "woodw.png 4"
4/texture = ExtResource( 13 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 11 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0

[node name="Main" type="Node2D"]
position = Vector2( 2.10527, -1.05264 )
script = ExtResource( 7 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 5 )
format = 1
tile_data = PoolIntArray( 655359, 1, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0 )

[node name="Enemy" parent="." instance=ExtResource( 3 )]
position = Vector2( 513.515, 148.95 )

[node name="InGameMenu" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 6 )

[node name="Panel" type="Panel" parent="InGameMenu"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -100.0
margin_right = 175.0
margin_bottom = 204.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="InGameMenu"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -100.0
margin_right = 150.0
margin_bottom = 100.0
custom_constants/separation = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="InGameMenu/VBoxContainer"]
margin_right = 300.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 6 )
text = "Pause"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="InGameMenu/VBoxContainer"]
margin_top = 72.0
margin_right = 300.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 7 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" type="Button" parent="InGameMenu/VBoxContainer"]
margin_top = 109.0
margin_right = 300.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 7 )
text = "Retry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit to Character Select" type="Button" parent="InGameMenu/VBoxContainer"]
margin_top = 146.0
margin_right = 300.0
margin_bottom = 166.0
text = "Quit to Character Select"

[node name="Quit to Menu" type="Button" parent="InGameMenu/VBoxContainer"]
margin_top = 169.0
margin_right = 300.0
margin_bottom = 203.0
custom_fonts/font = SubResource( 7 )
text = "Quit to Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Windowed\?" type="CheckBox" parent="InGameMenu/VBoxContainer"]
margin_top = 206.0
margin_right = 300.0
margin_bottom = 230.0
pressed = true
text = "Windowed?"

[node name="Label2" type="Label" parent="InGameMenu/VBoxContainer"]
margin_top = 233.0
margin_right = 300.0
margin_bottom = 247.0
text = "Master"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="InGameMenu/VBoxContainer"]
margin_top = 250.0
margin_right = 300.0
margin_bottom = 266.0
min_value = -24.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stage" type="Sprite" parent="."]
position = Vector2( 515.17, 270.729 )
scale = Vector2( 2.85874, 2.25838 )
z_index = -1
texture = ExtResource( 10 )

[node name="UI" parent="." instance=ExtResource( 11 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 17.9606
margin_top = -18.8257
margin_right = 1042.96
margin_bottom = 621.174

[node name="BGM" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 511, 0 )
stream = ExtResource( 12 )
volume_db = -8.667
autoplay = true

[node name="TileMap2" type="TileMap" parent="."]
tile_set = SubResource( 12 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -131072, 4, 0, -65536, 4, 0, 65534, 2, 0, 65535, 2, 0, 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 8, 2, 0, 9, 2, 0, 10, 2, 0, 11, 2, 0, 12, 2, 0, 13, 2, 0, 14, 2, 0, 15, 2, 0, 16, 2, 0, 17, 2, 0, 18, 2, 0, 19, 2, 0, 20, 2, 0, 21, 2, 0, 22, 2, 0, 23, 2, 0, 24, 2, 0, 25, 2, 0, 26, 2, 0, 27, 2, 0, 28, 2, 0, 29, 2, 0, 30, 2, 0, 31, 2, 0, 32, 2, 0, 33, 2, 0, 34, 2, 0, 35, 2, 0, 36, 2, 0, 37, 2, 0, 38, 2, 0, 39, 2, 0, 40, 2, 0, 41, 2, 0, 42, 2, 0, 43, 2, 0, 44, 2, 0, 45, 2, 0, 46, 2, 0, 47, 2, 0, 48, 2, 0, 49, 2, 0, 50, 2, 0, 51, 2, 0, 52, 2, 0, 53, 2, 0, 54, 2, 0, 55, 2, 0, 56, 2, 0, 57, 2, 0, 58, 2, 0, 59, 2, 0, 60, 2, 0, 61, 2, 0, 62, 2, 0, 63, 2, 0, 64, 2, 0, 65, 2, 0, 66, 2, 0, 65536, 4, 0, 65599, 4, 0, 131072, 4, 0, 131135, 4, 0, 196608, 4, 0, 196671, 4, 0, 262144, 4, 0, 262207, 4, 0, 327680, 4, 0, 327743, 4, 0, 393216, 4, 0, 393279, 4, 0, 458752, 4, 0, 458815, 4, 0, 524288, 4, 0, 524351, 4, 0, 589824, 4, 0, 589887, 4, 0, 655360, 4, 0, 655423, 4, 0, 720896, 4, 0, 720959, 4, 0, 786432, 4, 0, 786495, 4, 0, 851968, 4, 0, 852031, 4, 0, 917504, 4, 0, 917532, 3, 0, 917533, 0, 0, 917534, 0, 0, 917535, 0, 0, 917536, 0, 0, 917537, 0, 0, 917538, 0, 0, 917539, 0, 0, 917540, 0, 0, 917541, 1, 0, 917567, 4, 0, 983040, 4, 0, 983103, 4, 0, 1048576, 4, 0, 1048639, 4, 0, 1114112, 4, 0, 1114175, 4, 0, 1179648, 4, 0, 1179711, 4, 0, 1245184, 4, 0, 1245247, 4, 0, 1310720, 4, 0, 1310783, 4, 0, 1376256, 4, 0, 1376319, 4, 0, 1441792, 4, 0, 1441855, 4, 0, 1507328, 4, 0, 1507391, 4, 0, 1572864, 4, 0, 1572872, 3, 0, 1572873, 0, 0, 1572874, 0, 0, 1572875, 0, 0, 1572876, 0, 0, 1572877, 0, 0, 1572878, 0, 0, 1572879, 0, 0, 1572880, 0, 0, 1572881, 0, 0, 1572882, 0, 0, 1572883, 0, 0, 1572884, 0, 0, 1572885, 0, 0, 1572886, 1, 0, 1572906, 3, 0, 1572907, 0, 0, 1572908, 0, 0, 1572909, 0, 0, 1572910, 0, 0, 1572911, 0, 0, 1572912, 0, 0, 1572913, 0, 0, 1572914, 0, 0, 1572915, 0, 0, 1572916, 0, 0, 1572917, 0, 0, 1572918, 0, 0, 1572919, 1, 0, 1572927, 4, 0, 1638400, 4, 0, 1638463, 4, 0, 1703936, 4, 0, 1703999, 4, 0, 1769472, 4, 0, 1769535, 4, 0, 1835008, 4, 0, 1835071, 4, 0, 1900544, 4, 0, 1900607, 4, 0, 1966080, 4, 0, 1966107, 3, 0, 1966108, 0, 0, 1966109, 0, 0, 1966110, 0, 0, 1966111, 0, 0, 1966112, 0, 0, 1966113, 0, 0, 1966114, 0, 0, 1966115, 0, 0, 1966116, 0, 0, 1966117, 0, 0, 1966118, 0, 0, 1966119, 1, 0, 1966143, 4, 0, 2031616, 4, 0, 2031679, 4, 0, 2097152, 4, 0, 2097215, 4, 0, 2162688, 4, 0, 2162751, 4, 0, 2228224, 4, 0, 2228287, 4, 0, 2293760, 4, 0, 2293823, 4, 0, 2490363, 0, 0, 2490364, 0, 0, 2490365, 0, 0, 2490366, 0, 0, 2490367, 0, 0, 2424832, 0, 0, 2424833, 0, 0, 2424834, 0, 0, 2424835, 0, 0, 2424836, 0, 0, 2424837, 0, 0, 2424838, 0, 0, 2424839, 0, 0, 2424840, 0, 0, 2424841, 0, 0, 2424842, 0, 0, 2424843, 0, 0, 2424844, 0, 0, 2424845, 0, 0, 2424846, 0, 0, 2424847, 0, 0, 2424848, 0, 0, 2424849, 0, 0, 2424850, 0, 0, 2424851, 0, 0, 2424852, 0, 0, 2424853, 0, 0, 2424854, 0, 0, 2424855, 0, 0, 2424856, 0, 0, 2424857, 0, 0, 2424858, 0, 0, 2424859, 0, 0, 2424860, 0, 0, 2424861, 0, 0, 2424862, 0, 0, 2424863, 0, 0, 2424864, 0, 0, 2424865, 0, 0, 2424866, 0, 0, 2424867, 0, 0, 2424868, 0, 0, 2424869, 0, 0, 2424870, 0, 0, 2424871, 0, 0, 2424872, 0, 0, 2424873, 0, 0, 2424874, 0, 0, 2424875, 0, 0, 2424876, 0, 0, 2424877, 0, 0, 2424878, 0, 0, 2424879, 0, 0, 2424880, 0, 0, 2424881, 0, 0, 2424882, 0, 0, 2424883, 0, 0, 2424884, 0, 0, 2424885, 0, 0, 2424886, 0, 0, 2424887, 0, 0, 2424888, 0, 0, 2424889, 0, 0, 2424890, 0, 0, 2424891, 0, 0, 2424892, 0, 0, 2424893, 0, 0, 2424894, 0, 0, 2424895, 0, 0, 2424896, 0, 0, 2424897, 0, 0 )
[connection signal="pressed" from="InGameMenu/VBoxContainer/Continue" to="InGameMenu" method="_on_Continue_pressed"]
[connection signal="pressed" from="InGameMenu/VBoxContainer/Retry" to="InGameMenu" method="_on_Retry_pressed"]
[connection signal="pressed" from="InGameMenu/VBoxContainer/Quit to Character Select" to="InGameMenu" method="_on_Quit_to_Character_Select_pressed"]
[connection signal="pressed" from="InGameMenu/VBoxContainer/Quit to Menu" to="InGameMenu" method="_on_Quit_to_Menu_pressed"]
[connection signal="pressed" from="InGameMenu/VBoxContainer/Windowed?" to="InGameMenu" method="_on_Windowed_pressed"]
[connection signal="value_changed" from="InGameMenu/VBoxContainer/HSlider" to="InGameMenu" method="_on_HSlider_value_changed"]
